[build-system]
# Our setup.py might import other things from this directory, meaning
# in needs to be on sys.path. That's not guaranteed in a PEP517 world;
# the __legacy__ build module makes that true. Ultimately we need to do that
# ourself (and/or continue to simplify our build system).
build-backend = "setuptools.build_meta:__legacy__"
requires = [
     "setuptools >= 40.8.0",
     "wheel",

     # Python 3.7 requires at least Cython 0.27.3.
     # 0.28 is faster, and (important!) lets us specify the target module
     # name to be created so that we can have both foo.py and _foo.so
     # at the same time. 0.29 fixes some issues with Python 3.7,
     # and adds the 3str mode for transition to Python 3.
     "Cython >= 0.29.13; platform_python_implementation == 'CPython'",
]
